# Binaryhelper

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml  setup.py
.github/workflows/: docs.yml  release.yml  test.yml  test_py_versions.yml
bier/: __init__.py
bier/EndianedBinaryIO/: EndianedIOBase.py  EndianedStreamIO.py  __init__.py
bier/EndianedBinaryIO/C/: __init__.py
bier/serialization/: BinarySerializable.py  Serializable.py  TypeNode.py  __init__.py  builtins.py  metadata.py  options.py
bier/struct/: BinarySerializable.py  Serializable.py  TypeNode.py  __init__.py  options.py  typing.py
src/EndianedBinaryIO/: EndianedBytesIO.cpp  EndianedIOBase.cpp  EndianedIOBase.hpp  EndianedStreamIO.cpp  PyConverter.hpp  PyFloat_Half.cpp
tests/EndianedBinaryIO/: EndianedIOTestHelper.py
tests/serialization/: TypeNode_test.py  custom_root_node_test.py
