[build-system]
requires = ["setuptools~=75", "st_zig; platform_system == 'Windows'"]
build-backend = "setuptools.build_meta"

[project]
name = "bier"
authors = [{ name = "Rudolf Kolbe", email = "rkolbe96@gmail.com" }]
description = ""
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dynamic = ["version"]

[project.optional-dependencies]
# optional dependencies must be lowercase/normalized
tests = ["pytest"]
dev = ["ruff", "pre-commit", "bier[tests]"]

[project.urls]
"Homepage" = "https://github.com/K0lb3/bier"
"Bug Tracker" = "https://github.com/K0lb3/bier/issues"

[tool.setuptools.dynamic]
version = { attr = "bier.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "i686", "armv7l", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64", "x86", "ARM64"]

[tool.pyright]
pythonVersion = "3.13"
