[build-system]
requires = ["setuptools>=75,<80"]
build-backend = "setuptools.build_meta"

[project]
name = "bier"
authors = [{ name = "Rudolf Kolbe", email = "rkolbe96@gmail.com" }]
description = ""
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "typing-extensions>=4.6; python_version >= '3.8' and python_version < '3.12'",
]
dynamic = ["version"]

[project.optional-dependencies]
# optional dependencies must be lowercase/normalized
tests = ["pytest"]
dev = ["ruff", "pre-commit", "bier[tests]"]

[project.urls]
"Homepage" = "https://github.com/K0lb3/Binaryhelper"
"Bug Tracker" = "https://github.com/K0lb3/Binaryhelper/issues"

[tool.setuptools.dynamic]
version = { attr = "bier.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64", "ARM64"]

[tool.pyright]
pythonVersion = "3.12"
